0.4.16/_sources/gallery/layers.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/layers.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_layers.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_layers.py:


Layers
======

Display multiple image layers using the add_image API and then reorder them
using the layers swap method and remove one

.. GENERATED FROM PYTHON SOURCE LINES 8-26



.. image-sg:: /gallery/images/sphx_glr_layers_001.png
   :alt: layers
   :srcset: /gallery/images/sphx_glr_layers_001.png
   :class: sphx-glr-single-img





.. code-block:: default


    from skimage import data
    from skimage.color import rgb2gray
    import numpy as np
    import napari


    # create the viewer with several image layers
    viewer = napari.view_image(rgb2gray(data.astronaut()), name='astronaut')
    viewer.add_image(data.camera(), name='photographer')
    viewer.add_image(data.coins(), name='coins')
    viewer.add_image(data.moon(), name='moon')
    viewer.add_image(np.random.random((512, 512)), name='random')
    viewer.add_image(data.binary_blobs(length=512, volume_fraction=0.2, n_dim=2), name='blobs')
    viewer.grid.enabled = True

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_layers.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: layers.py <layers.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: layers.ipynb <layers.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
